# dispatch

./: .gitignore  README.md  pyproject.toml
corpus/code_patterns/: exactly-once-write.md  idempotent-backfill.md  schema-drift-repair.md
corpus/contracts/: orders-fact.yaml  user-events.yaml
corpus/incidents/: inc-001.md  inc-002.md  inc-003.md
corpus/runbooks/: data-quality-alert.md  pipeline-failure.md  schema-drift.md
corpus/validation_examples/: distribution-bounds.md  null-rate-check.md  row-count-check.md
demo/: run_demo.py
dispatch/: config.py
dispatch/agent/: orchestrator.py  prompts.py  tools.py
dispatch/escalation/: handler.py
dispatch/ingest/: loader.py
dispatch/retrieve/: search.py  store.py
pincer/: config.py
pincer/agent/: orchestrator.py  prompts.py
pincer/escalation/: handler.py
pincer/ingest/: chunker.py  loader.py
pincer/retrieve/: search.py  store.py
tests/: test_chunker.py  test_search.py
